<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SensorCollector</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Location</string>
    <string name="title_section2">Activity</string>
    <string name="title_section3">Venue</string>
    <string name="collect">Server Transmission</string>
    <string name="sample_loc">0.0</string>
    <string name="example">Example Source</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
	<string name="add_category">Add Category</string>
	<string name="add_label">Add Label</string>
	<string name="reset">Reset</string>
	<string name="modify">Modify</string>
	<string name="sync">Sync</string>
	<string name="search">Search</string>
	<string name="default_gps">0, 0</string>
	<string name="selected_venue">Selected Venue</string>
	<string name="send_act_venue">Send act and venue</string>
	<string name="add_favorite">Add Favor</string>
    <string name="empty">Empty</string>
    <string name="custom">Custom</string>
    <string name="custom_venue">Custom Venue</string>
	
	<string name="no_category">No such category!!</string>
	<string name="no_venue">No Venue!!</string>
	<string name="no_act">No Activity!!</string>
	
	<string name="send_success">Transmission Success!!</string>
	<string name="send_failed">Transmission Failed!!</string>
	
</resources>
