<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
     >

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:orientation="vertical" 
        android:background="@drawable/dialog_back"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/add_category"
            android:textSize="20sp" 
            android:textColor="@android:color/black"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/category_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:layout_margin="20dp"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:inputType="text"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" 
            android:layout_marginTop="20dp"
            >

            <Button
                android:id="@+id/btn_create"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/create" />

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/cancel" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
